[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/animated/skills/attack_energy_blade_move.png" type="Texture" id=1]
[ext_resource path="res://scripts/character/skills/attack_energy_blade.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/animated/skills/attack_energy_blade_disappear.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "move",
"speed": 18.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "disappear",
"speed": 18.0
} ]

[node name="Area2D2" type="Area2D"]
scale = Vector2( 2, 3 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -15, 6, -12, 1, -8, -2, -3, -4, 3, -4, 8, -2, 12, 1, 15, 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1.5, 1 )
frames = SubResource( 1 )
animation = "move"
frame = 1

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
